[gd_scene load_steps=13 format=3 uid="uid://cexrovdxbxapb"]

[ext_resource type="Script" uid="uid://dmr2nnkuvgtqr" path="res://Interface/GlobalInterface/UnitList/UnitListMenuItem.gd" id="1_i6766"]
[ext_resource type="Texture2D" uid="uid://bcm2ej5ytb8cm" path="res://Graphics/Portraits/simplified cartoon serious menacing doberman dog looking up isolated white background 09-02-2025 at 13-46-56.jpeg" id="2_xd66s"]
[ext_resource type="PackedScene" uid="uid://bnwh3ltkopbuh" path="res://Interface/GlobalInterface/Field/ReactiveProgressField.tscn" id="3_bele2"]
[ext_resource type="Script" uid="uid://bn22qne7p8gp8" path="res://Interface/GlobalInterface/Field/ReactiveTextField.gd" id="4_pb6xb"]
[ext_resource type="Texture2D" uid="uid://bic2ej0a2kpqq" path="res://Graphics/Icons/White/basic_sword.png" id="5_llwmx"]
[ext_resource type="Texture2D" uid="uid://cc4ylrhrab4ap" path="res://Graphics/Icons/White/basic_shield.png" id="6_u5tcr"]
[ext_resource type="Texture2D" uid="uid://cw7pp4uidrpwy" path="res://Graphics/Icons/White/magic_staff.png" id="7_cu7x5"]
[ext_resource type="PackedScene" uid="uid://cc3uq6b0rbj7n" path="res://Interface/PlayerMenuInterface/EquipmentSlot.tscn" id="7_wrwym"]
[ext_resource type="Texture2D" uid="uid://b51d0ju8bdmou" path="res://Graphics/Icons/White/magic_shield.png" id="8_jt7x4"]
[ext_resource type="Texture2D" uid="uid://b0wdeco2raq4u" path="res://Graphics/Icons/White/wing_boot.png" id="9_amu5k"]
[ext_resource type="PackedScene" uid="uid://b3gllupgt2pit" path="res://Interface/GlobalInterface/Field/ReactiveMultiField.tscn" id="9_je2iw"]
[ext_resource type="Texture2D" uid="uid://ybhr3ql1syou" path="res://Graphics/Icons/White/shamrock.png" id="10_er6jn"]

[node name="UnitListMenuItem" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -136.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MenuItemPanel"
script = ExtResource("1_i6766")

[node name="MainLayoutRows" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MainLayoutCols" type="HBoxContainer" parent="MainLayoutRows"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PortraitFrame" type="PanelContainer" parent="MainLayoutRows/MainLayoutCols"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"PortraitFrame"

[node name="PortraitTexture" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/PortraitFrame"]
show_behind_parent = true
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_xd66s")
expand_mode = 1

[node name="StatsBlock" type="MarginContainer" parent="MainLayoutRows/MainLayoutCols"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock"]
layout_mode = 2
alignment = 1

[node name="Header" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/Header"]
layout_mode = 2
text = "Praxofra"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"unit_name"

[node name="LevelAndClass" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="LevelLabel" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/Header/LevelAndClass"]
layout_mode = 2
text = "Lv."

[node name="Level" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/Header/LevelAndClass"]
layout_mode = 2
text = "2"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"level"

[node name="Class" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/Header/LevelAndClass"]
layout_mode = 2
text = "Mage"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"adventurer_class"

[node name="StatsBlockBody" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StatsBlock" type="VBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HpMpBlock" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StatHp" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatHpLabel" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock/StatHp"]
layout_mode = 2
theme_type_variation = &"TextBig"
text = "HP:"

[node name="StatHpValue" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock/StatHp" instance=ExtResource("3_bele2")]
layout_mode = 2
theme_type_variation = &"TextBig"
/max_value_property = &"stat_hp"
/linked_class = &"Adventurer"
/linked_property = &"current_hp"

[node name="StatMp" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatMpLabel" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock/StatMp"]
layout_mode = 2
theme_type_variation = &"TextBig"
text = "MP:"

[node name="StatMpValue" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/HpMpBlock/StatMp" instance=ExtResource("3_bele2")]
layout_mode = 2
theme_type_variation = &"TextBig"
/max_value_property = &"stat_mp"
/linked_class = &"Adventurer"
/linked_property = &"current_mp"

[node name="StatValuesBlock" type="GridContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock"]
layout_mode = 2
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 8
columns = 3

[node name="StatAtk" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatAtkLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatAtk"]
layout_mode = 2
texture = ExtResource("5_llwmx")
expand_mode = 3

[node name="StatAtkValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatAtk"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "8"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_atk"

[node name="StatDef" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatDefLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatDef"]
layout_mode = 2
texture = ExtResource("6_u5tcr")
expand_mode = 2

[node name="StatDefValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatDef"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "7"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_def"

[node name="StatMag" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatMagLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatMag"]
layout_mode = 2
texture = ExtResource("7_cu7x5")
expand_mode = 2

[node name="StatMagValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatMag"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "14"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_mag"

[node name="StatRes" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatResLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatRes"]
layout_mode = 2
texture = ExtResource("8_jt7x4")
expand_mode = 2

[node name="StatResValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatRes"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "13"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_res"

[node name="StatDex" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatDexLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatDex"]
layout_mode = 2
texture = ExtResource("9_amu5k")
expand_mode = 2

[node name="StatDexValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatDex"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "5"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_dex"

[node name="StatLuk" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
layout_mode = 2

[node name="StatLukLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatLuk"]
layout_mode = 2
texture = ExtResource("10_er6jn")
expand_mode = 2

[node name="StakLukValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatLuk"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "0"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_luk"

[node name="StatCha" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock"]
visible = false
layout_mode = 2

[node name="StatChaLabel" type="TextureRect" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatCha"]
layout_mode = 2

[node name="StatChaValue" type="Label" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/StatsBlock/StatValuesBlock/StatCha"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "8"
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"stat_cha"

[node name="TraitsListWideLayout" type="MarginContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody"]
layout_mode = 2

[node name="TraitsList" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/TraitsListWideLayout" instance=ExtResource("9_je2iw")]
layout_mode = 2
size_flags_horizontal = 1
theme_type_variation = &"TextBig"
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16
/linked_class = &"Adventurer"
/linked_property = &"traits"

[node name="EquipSlots" type="HBoxContainer" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="WeaponSlot" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/EquipSlots" instance=ExtResource("7_wrwym")]
layout_mode = 2

[node name="ArmorSlot" parent="MainLayoutRows/MainLayoutCols/StatsBlock/VBoxContainer/StatsBlockBody/EquipSlots" instance=ExtResource("7_wrwym")]
layout_mode = 2

[node name="ActionButtons" type="VBoxContainer" parent="MainLayoutRows/MainLayoutCols"]
layout_mode = 2
alignment = 1

[node name="TraitsListNarrowLayout" type="MarginContainer" parent="MainLayoutRows"]
layout_mode = 2
